# mrm

./: README.md  pyproject.toml
.github/workflows/: reproducibility.yml
docs/: combined_submission_mapping.md  cost_aware_active_discrimination.md  manuscript_skeleton.md  mechanism_ambiguity_frontier.md  minimal_quotient_active_discrimination.md  neutral_latent_world_quotient.md  probabilistic_observation_update.md  robust_observation_update.md  standalone_verification_audit.md  theorem_program.md  value_of_information_design.md
mrm/: __init__.py  costs.py  frontier.py  joint.py  laws.py  probabilistic.py  quotient.py  robust.py  voi.py
scripts/: __init__.py  verify_mrm_core.py
tests/: test_costs.py  test_frontier.py  test_joint.py  test_laws.py  test_probabilistic.py  test_quotient.py  test_replay_contract.py  test_response_type_invariants.py  test_robust.py  test_voi.py
