[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mechanism-robust-macrolaws"
version = "0.1.0"
description = "Finite universal, typed, and set-valued macro-laws under mechanism uncertainty"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
